2010-01-20  vadim  <vadim@vk.crocodile.org>

	* IOSObjectGroup.cpp (IOSObjectGroup::toString): Refs #1107: first
	draft of the object-groups support for Cisco IOS. Controlled by a
	checkbox in the "Advanced" settings dialog of the firewall object;
	this feature requires IOS v12.4(20)T or later and is off by
	default.

	* CompilerDriver.cpp (CompilerDriver::validateClusterGroups):
	fixes #1119 "add test for the integrity of failover cluster
	groups".  Compilers require all failover group objects to be
	configured with interfaces of member firewalls.

	* PolicyCompiler_cisco_acls.cpp (setInterfaceAndDirectionBySrc::processNext):
	fixes #1120 "redundant commands generated for ssh
	access". Compiler for PIX generated two "ssh address netmask
	inside" commands for the same rule that permits ssh to the firewall.

	* CompilerDriver_pix_run.cpp (CompilerDriver_pix::assembleFwScript):
	fixes #1106 "fwb_pix does not include prolog". Prolog script was
	not included in generated configuration if firewall object was
	converted from some other platform because FirewallOptions? object
	inherited old "prolog_place" variable

	* Helper.cpp (Helper::findInterfaceByNetzone): fixes #1118
	"fwb_pix uses wrong interface compiling the second cluster
	member".  NAT compiler for PIX failed to find interface with
	correct network zone if interface was a child of another
	interface, e.g. vlan subinterface.

	* clusterMembersDialog.cpp (clusterMembersDialog::getSelectedMembers):
	fixes #1117 "failover group member editor loses interfaces". If
	failover group included vlan interfaces of the member firewalls,
	the dialog that appears when user clicks on "manage members"
	button would not show members at all.

	* NATCompiler_pix.cpp (NATCompiler_pix::_expand_interface): fixes
	#1115: "fwb_pix crash compiling cluster NAT rule set with
	interface in TSrc". A cluster interface was used in the TSrc rule
	element of a NAT rule. Cluster interfaces of PIX cluster have no