@@ -61,7 +61,7 @@ public slots:
     virtual void loadFWObject(libfwbuilder::FWObject *obj);
     virtual void validate(bool*);
     virtual void getHelpName(QString*);
-
+    virtual void connlimitAboveLabelChange();
 };
 
 #endif // __RULEOPTIONSDIALOG_H
