@@ -1,5 +1,12 @@
 2010-01-20  vadim  <vadim@vk.crocodile.org>
 
+	* PolicyCompiler_PrintRule.cpp (PrintRule::_printModules): fixes
+	#1123, #1124: Text label next to the option that translates into
+	--connlimit-above clause for the iptables "connlimit" module
+	now matches description in the iptables manual. Added checkbox
+	that allows the user to add negation to the generated code
+	(make it ! --connlimit-above NN)
+
 	* IOSObjectGroup.cpp (IOSObjectGroup::toString): Refs #1107: first
 	draft of the object-groups support for Cisco IOS. Controlled by a
 	checkbox in the "Advanced" settings dialog of the firewall object;
